@@ -58,6 +58,7 @@ namespace kiwix {
     bool addBookFromPath(const string path, const string url = "", const bool checkMetaData = false);
     Library cloneLibrary();
     bool getBookById(const string id, Book &book);
+    unsigned int getBookCount(const bool localBooks, const bool remoteBooks);
     bool updateBookLastOpenDateById(const string id);
     void removeBookPaths();
     bool listBooks(const supportedListMode);
